--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "markdown-it": "^8.4.2",
     "multer": "^1.3.1",
-    "serve-static": "^1.13.2"
+    "serve-static": "^1.13.2",
+    "swig": "^1.4.2"
   }
 }
